--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/guotie/spider/issues"
   },
   "homepage": "https://github.com/guotie/spider#readme",
-    "dependencies": {
+  "dependencies": {
+    "assert": "^1.3.0",
     "async": "^1.2.1",
     "cheerio": "^0.19.0",
     "es6-promise": "^2.3.0",
@@ -31,12 +32,12 @@
     "koa-send": "^1.3.1",
     "marked": "^0.3.3",
     "mkdirp": "^0.5.1",
-    "pg": "^4.4.0",
-    "pg-hstore": "^2.3.2",
+    "mocha": "^2.2.5",
+    "node-libs-browser": "^0.5.2",
     "redis": "^0.12.1",
     "request": "^2.58.0",
-    "sequelize": "^3.3.0",
     "to-markdown": "^1.2.1",
+    "webpack": "^1.10.1",
     "winston": "^1.0.1"
   }
 }
