--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "spider in node.js",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha --compilers js:babel/register"
   },
   "repository": {
     "type": "git",
@@ -39,5 +39,8 @@
     "to-markdown": "^1.2.1",
     "webpack": "^1.10.1",
     "winston": "^1.0.1"
+  },
+  "devDependencies": {
+    "babel": "^5.6.14"
   }
 }
