--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spider",
+  "name": "xspider",
   "version": "0.1.0",
   "description": "spider in node.js",
   "main": "index.js",
@@ -25,19 +25,10 @@
     "async": "^1.2.1",
     "cheerio": "^0.19.0",
     "es6-promise": "^2.3.0",
-    "graceful-fs": "^4.1.2",
-    "iconv-lite": "^0.4.10",
-    "koa": "^0.21.0",
-    "koa-router": "^5.1.2",
-    "koa-send": "^1.3.1",
-    "marked": "^0.3.3",
-    "mkdirp": "^0.5.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
     "redis": "^0.12.1",
     "request": "^2.58.0",
-    "to-markdown": "^1.2.1",
-    "webpack": "^1.10.1",
     "winston": "^1.0.1"
   },
   "devDependencies": {
